feat: implementar verificação automática do banco de dados (Opção 3)
- Adicionar sistema de verificação automática na inicialização
- Criar DatabaseInitializer component para wrapper da aplicação
- Implementar useDatabaseSetup hook para gerenciar estado
- Adicionar funções ensureTablesExist e runMigrationsAutomatically
- Criar interface visual para loading, erro e sucesso
- Adicionar fallback para setup manual se automação falhar
- Incluir documentação completa em SETUP_AUTO_CHECK.md
- Adicionar exemplo de uso em DatabaseSetupExample.tsx
- Integrar no App.tsx para verificação automática

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "setup-db": "node scripts/setup-database.js"
+    "setup-db": "node scripts/setup-database.js",
+    "dev:auto-setup": "echo 'Iniciando com verificação automática do banco...' && npm run dev"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
