--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev:auto-setup": "echo 'Iniciando com verificação automática do banco...' && npm run dev"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
