--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "setup-db": "node scripts/setup-database.js",
+    "create-admins": "node scripts/create-admin-users.js",
     "dev:auto-setup": "echo 'Iniciando com verificação automática do banco...' && npm run dev"
   },
   "dependencies": {
@@ -48,6 +49,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
