feat: Implementa chatbot com IA Gemini e opções personalizadas
- Adiciona ChatBot.tsx com integração completa da IA Gemini
- Implementa modo consultor especializado em barbearia
- Adiciona opções finais personalizadas (Tenho outras dúvidas/Preciso pensar mais)
- Corrige erros de setState durante renderização no useErrorDetection
- Adiciona GeminiStatus.tsx para monitoramento da API
- Inclui configuração e hooks para integração com Gemini AI
- Adiciona documentação completa da integração

--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 # Configurações da aplicação
 VITE_APP_NAME="Mateus Barbershop - Barbearia Premium"
 VITE_APP_DESCRIPTION="Sistema de agendamento para barbearia"
+
+# Configuração da API do Google Gemini (opcional)
+# Para obter uma API key, visite: https://makersuite.google.com/app/apikey
+VITE_GEMINI_API_KEY=AIzaSyAT1hh3fFDx5kFPqN-0u4hWFMbz25Xf5og
